<resources>
    <string name="app_name">Marketplace</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="google">Google</string>
    <string name="atau_masuk_dengan">atau masuk dengan</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
</resources>