<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_13sdp"
            android:text="Masuk"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_2sdp"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:hint="Email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingStart="@dimen/_2ssp"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="Password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp"
            android:layout_gravity="end"
            android:text="@string/lupa_kata_sandi"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_masuk"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:text="@string/masuk"
            android:textSize="@dimen/_13ssp"
            android:textAllCaps="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_15sdp">

            <View
                android:id="@+id/lineLeft"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/metode"
                android:background="@color/grey"/>

            <TextView
                android:id="@+id/metode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="@dimen/_13sdp"
                android:text="@string/atau_masuk_dengan" />

            <View
                android:id="@+id/lineRight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/metode"
                android:background="@color/grey"/>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Button.Outline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:textColor="@color/grey"
            android:textAllCaps="false"
            android:text="@string/google"
            android:textSize="@dimen/_13ssp"
            app:icon="@drawable/ic_google"
            app:iconSize="@dimen/_19sdp"
            app:iconTint="@null" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_3sdp"
                android:text="@string/belum_punya_akun" />

            <TextView
                android:id="@+id/daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daftar"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Logout" />
    </LinearLayout>

</RelativeLayout>